# crab

./: .gitignore  CMakeLists.txt  README.md
crab_lang/: CMakeLists.txt  crabGrammar.py
include/crab/analysis/: abs_transformer.hpp  bwd_analyzer.hpp
include/crab/cfg/: cfg.hpp
include/crab/domains/: boxes.hpp  linear_constraints.hpp
tools/: CMakeLists.txt  config.h.cmake  crab.cc  crabParser.py  crabTypes.py
